--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rosy-reverie-site</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Swasti's website</title>
+    <meta name="description" content="Swasti Singh — Software Engineer passionate about data and AI systems." />
+    <meta name="author" content="Swasti Singh" />
 
-    <meta property="og:title" content="rosy-reverie-site" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Swasti Singh | Software Engineer" />
+    <meta property="og:description" content="Explore Swasti’s projects in full-stack development, AI agents, and data systems." />
+   
+    <meta property="og:url" content="https://swastisingh.com/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Swasti Singh | Software Engineer" />
+    <meta name="twitter:description" content="Engineer, builder, and AI explorer sharing ideas and work." />
+    
+
   </head>
 
   <body>
